@@ -6,6 +6,9 @@ git-annex (5.20150732) UNRELEASED; urgency=medium
   * fsck: Commit incremental fsck database when --time-limit is reached.
     Previously, some of the last files fscked did not make it into the
     database when using --time-limit.
+  * fsck: Commit incremental fsck database after every 1000 files
+    fscked, or every 5 minutes, whichever comes first. Previously,
+    commits were made every 1000 files fscked.
 
  -- Joey Hess <id@joeyh.name>  Fri, 31 Jul 2015 12:31:39 -0400
 
